--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,9 +10,18 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
 	<meta name="description" content="">
 	<script type="module" src="gallery.js"></script>
+	<script type="module" src="modal.js"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+	
+	<aside id="modal1" class="modal" aria-hidden="true" aria-modal="false" role="dialog" style="display: none;">
+<div class="modal-wrapper js-modal-stop" >
+	<button class="js-modal-close">fermer la modale</button>
+iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
+	</div>
+	</aside>
+
 	<div class="edit-mode-bar">
 		<span><i class="fa-solid fa-pen-to-square"></i></span>
 		Mode édition
@@ -48,7 +57,7 @@
 		<h2>Mes Projets</h2>
 		<div class="modifier">
 		<span><i class="fa-solid fa-pen-to-square"></i></span>
-		<p>Modifier</p>
+		<p href="#modal1" class="js-modal">Modifier</p>
 	</div>
 	</div>
 		<div id="buttons"> <!--Faire rester vert quand dessus -->
