modal il reste juste ajouter photo prblm

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -31,7 +31,7 @@
 			<input id="photo-input" type="file" />
 		  </button>
 		</div>
-		<span><p class="text-add-photo">jpg, png : 4mo max</p></span>
+		<span class="text-format-photo"><p class="text-add-photo">jpg, png : 4mo max</p></span>
 		<form id="add-photo-form">
 			<label class="photo-title" for="photo-title">Titre</label>
 			<input type="text" name="titre" id="title-field" class="title-form-field" title="titre">
