--- a/FrontEnd/login_page.html
+++ b/FrontEnd/login_page.html
@@ -27,8 +27,7 @@
     <h1 id="login-header">Log in</h1>
     <form id="login-form">
       <label for="username">E-mail</label>
-      <input type="text" name="username" id="username-field" class="login-form-field" title="Email"
-        >
+      <input type="text" name="username" id="username-field" class="login-form-field" title="Email" >
       <label for="password">Mot de passe</label>
       <input type="password" name="password" id="password-field" class="login-form-field" title="Password">
       <input type="submit" value="Se connecter" id="login-form-submit">
