--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,116 +1,149 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
-	<meta name="description" content="">
-	<script type="module" src="gallery.js"></script>
-	<script type="module" src="modal.js"></script>
-	<link rel="stylesheet" href="./assets/style.css">
-</head>
-<body>
-	
-	<aside id="modal1" class="modal" aria-hidden="true" aria-modal="false" role="dialog" style="display: none;">
-<div class="modal-wrapper js-modal-stop" >
-	<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
-	<div class="modal-content">
-		<p class="line"></p>
-	  </div>
-	  <div class="modal-content add-photo-modal" style="display: none;">
-		<h1 class="title-add-photo">Ajout Photo</h1>
-		<div class="photo-view"></div>
-		<div class="add-photo-container">
-			<p id="image-preview" class="img-icon"><i class="fa-regular fa-image"></i></p>	
-		<button class="add-photo">
-			<p>+ Ajouter photo</p>
-			<input id="photo-input" type="file" />
-		  </button>
-		</div>
-		<span class="text-format-photo"><p class="text-add-photo">jpg, png : 4mo max</p></span>
-		<form id="add-photo-form">
-			<label class="photo-title" for="photo-title">Titre</label>
-			<input type="text" name="titre" id="title-field" class="title-form-field" title="titre">
-			<label class="cat-title" for="category-select">Catégorie</label>
-			<select id="category-select" name="category">
-			  <!-- Options de catégories seront ajoutées ici -->
-			</select>
-			<p class="line"></p>
-			<button type="submit" id="validate-btn">Valider</button>
-		  </form>
-		  
-	  </div>
-	</div>
-	</aside>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sophie Bluel - Architecte d'intérieur</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <meta name="description" content="" />
+    <script type="module" src="gallery.js"></script>
+    <script type="module" src="modal.js"></script>
+    <link rel="stylesheet" href="./assets/style.css" />
+  </head>
+  <body>
+    <aside
+      id="modal1"
+      class="modal"
+      aria-hidden="true"
+      aria-modal="false"
+      role="dialog"
+      style="display: none"
+    >
+      <div class="modal-wrapper js-modal-stop">
+        <button class="js-modal-close">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <div class="modal-content"></div>
+        <p id="line1"></p>
+        <div class="modal-content add-photo-modal" style="display: none">
+          <h1 class="title-add-photo">Ajout Photo</h1>
+          <div class="photo-view"></div>
+          <div class="add-photo-container">
+            <p id="image-preview" class="img-icon">
+              <i class="fa-regular fa-image"></i>
+            </p>
+            <button class="add-photo">
+              <p>+ Ajouter photo</p>
+              <input id="photo-input" type="file" />
+            </button>
+          </div>
+          <span class="text-format-photo"
+            ><p class="text-add-photo">jpg, png : 4mo max</p></span
+          >
+          <form id="add-photo-form">
+            <label class="photo-title" for="photo-title">Titre</label>
+            <input
+              type="text"
+              name="titre"
+              id="title-field"
+              class="title-form-field"
+              title="titre"
+            />
+            <label class="cat-title" for="category-select">Catégorie</label>
+            <select id="category-select" name="category">
+              <!-- Options de catégories seront ajoutées ici -->
+            </select>
+            <p class="line"></p>
+            <button type="submit" id="validate-btn">Valider</button>
+          </form>
+        </div>
+      </div>
+    </aside>
 
-	<div class="edit-mode-bar">
-		<span><i class="fa-solid fa-pen-to-square"></i></span>
-		Mode édition
-	</div>		
-<header>
-	
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li id="logIn"><a href="login_page.html">login</a></li>
-			<li id="logout">logout</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<main>
+    <div class="edit-mode-bar">
+      <span><i class="fa-solid fa-pen-to-square"></i></span>
+      Mode édition
+    </div>
+    <header>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <nav>
+        <ul>
+          <li>projets</li>
+          <li>contact</li>
+          <li id="logIn"><a href="login_page.html">login</a></li>
+          <li id="logout">logout</li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="introduction">
+        <figure>
+          <img src="./assets/images/sophie-bluel.png" alt="" />
+        </figure>
+        <article>
+          <h2>Designer d'espace</h2>
+          <p>
+            Je raconte votre histoire, je valorise vos idées. Je vous accompagne
+            de la conception à la livraison finale du chantier.
+          </p>
+          <p>
+            Chaque projet sera étudié en commun, de façon à mettre en valeur les
+            volumes, les matières et les couleurs dans le respect de l’esprit
+            des lieux et le choix adapté des matériaux. Le suivi du chantier
+            sera assuré dans le souci du détail, le respect du planning et du
+            budget.
+          </p>
+          <p>
+            En cas de besoin, une équipe pluridisciplinaire peut-être constituée
+            : architecte DPLG, décorateur(trice)
+          </p>
+        </article>
+      </section>
+      <section id="portfolio">
+        <div class="mesprojets">
+          <h2>Mes Projets</h2>
+          <div class="modifier">
+            <span><i class="fa-solid fa-pen-to-square"></i></span>
+            <p href="#modal1" class="js-modal">Modifier</p>
+          </div>
+        </div>
+        <div id="buttons"></div>
+        <div class="gallery"></div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Vous avez un projet ? Discutons-en !</p>
+        <form action="#" method="post">
+          <label for="name">Nom</label>
+          <input type="text" name="name" id="name" />
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
+          <label for="message">Message</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <input type="submit" value="Envoyer" />
+        </form>
+      </section>
+    </main>
 
-	<section id="introduction">
-		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
-	<section id="portfolio">
-		<div class="mesprojets">
-		<h2>Mes Projets</h2>
-		<div class="modifier">
-		<span><i class="fa-solid fa-pen-to-square"></i></span>
-		<p href="#modal1" class="js-modal">Modifier</p>
-	</div>
-	</div>
-		<div id="buttons"> <!--Faire rester vert quand dessus -->
-		</div>
-		<div class="gallery">
-		</div>
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
-</main>
-
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
-</body>
+    <footer>
+      <nav>
+        <ul>
+          <li>Mentions Légales</li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
