--- a/FrontEnd/login_page.html
+++ b/FrontEnd/login_page.html
@@ -25,6 +25,7 @@
   </header>
   <main id="main-holder">
     <h1 id="login-header">Log in</h1>
+    <div id="error-message" style="display: none;">Mot de passe ou mail invalide.</div>
     <form id="login-form">
       <label for="username">E-mail</label>
       <input type="text" name="username" id="username-field" class="login-form-field" title="Email" >
@@ -32,10 +33,12 @@
       <input type="password" name="password" id="password-field" class="login-form-field" title="Password">
       <input type="submit" value="Se connecter" id="login-form-submit">
     </form>
-
+    <div class="mdp-oublié">Mot de passe Oublié</div>
   </main>
 </body>
-
+<footer>
+  <p class="mention-legale">Mention légales</p>
+</footer>
 </html>
 
 </html>
